--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Rectangle2D?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -15,8 +13,8 @@
     <rowConstraints>
         <RowConstraints />
     </rowConstraints>
-    <AnchorPane prefHeight="310.0" prefWidth="593.0">
-        <ImageView fx:id="imageView1" fitHeight="73.0" fitWidth="149.0" layoutX="235.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+    <AnchorPane prefHeight="300.0" prefWidth="600.0">
+        <ImageView fx:id="imageView" fitHeight="50" fitWidth="50" layoutX="235.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
          <viewport>
          </viewport>
         </ImageView>
