--- a/src/main/resources/views/topologySize.fxml
+++ b/src/main/resources/views/topologySize.fxml
@@ -12,7 +12,7 @@
         <RowConstraints />
     </rowConstraints>
     <AnchorPane prefHeight="275.0" prefWidth="384.0">
-        <Button layoutX="142.0" layoutY="210.0" mnemonicParsing="false" onAction="#setTopologySize" prefHeight="51.0" prefWidth="99.0" text="ОК">
+        <Button layoutX="142.0" layoutY="210.0" mnemonicParsing="false" onAction="#createConstructor" prefHeight="51.0" prefWidth="99.0" text="ОК">
             <font>
                 <Font size="20.0" />
             </font></Button>
@@ -31,7 +31,7 @@
             <Font size="43.0" />
          </font>
       </Label>
-      <TextField layoutX="217.0" layoutY="91.0" prefHeight="37.0" prefWidth="161.0" />
-      <TextField layoutX="217.0" layoutY="151.0" prefHeight="37.0" prefWidth="161.0" />
+      <Spinner fx:id="topologyHeight" layoutX="224.0" layoutY="93.0" prefHeight="34.0" prefWidth="149.0" />
+      <Spinner fx:id="topologyWidth" layoutX="224.0" layoutY="152.0" prefHeight="34.0" prefWidth="149.0" />
     </AnchorPane>
 </GridPane>
