--- a/src/main/resources/views/constructor.fxml
+++ b/src/main/resources/views/constructor.fxml
@@ -5,14 +5,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConstructorController">
-    <columnConstraints>
-        <ColumnConstraints />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints />
-    </rowConstraints>
-    <AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0">
+    <AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConstructorController">
       <children>
          <Button layoutX="14.0" layoutY="21.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" text="СОЗДАТЬ ТОПОЛОГИЮ" wrapText="true">
             <font>
@@ -65,4 +58,3 @@
             </font>
          </Label>
       </children></AnchorPane>
-</GridPane>
