--- a/src/main/resources/views/constructor.fxml
+++ b/src/main/resources/views/constructor.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-    <AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConstructorController">
+<AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConstructorController">
       <children>
          <Button layoutX="14.0" layoutY="21.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" text="СОЗДАТЬ ТОПОЛОГИЮ" wrapText="true">
             <font>
@@ -57,4 +60,9 @@
                <Font size="17.0" />
             </font>
          </Label>
+      <ImageView fx:id="petrolStation" fitHeight="40.0" fitWidth="40.0" layoutX="869.0" layoutY="230.0" onDragDetected="#petrolStationOnDragDetectedEvent" onDragOver="#petrolStationOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../pics/gas-pump.png" />
+         </image>
+      </ImageView>
       </children></AnchorPane>
