--- a/src/main/resources/views/constructor.fxml
+++ b/src/main/resources/views/constructor.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -60,9 +61,20 @@
                <Font size="17.0" />
             </font>
          </Label>
-      <ImageView fx:id="petrolStation" fitHeight="40.0" fitWidth="40.0" layoutX="869.0" layoutY="230.0" onDragDetected="#petrolStationOnDragDetectedEvent" onDragOver="#petrolStationOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="petrolStation" fitHeight="50.0" fitWidth="50.0" layoutX="869.0" layoutY="225.0" onDragDetected="#petrolStationOnDragDetectedEvent" onDragOver="#petrolStationOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../pics/gas-pump.png" />
          </image>
+         <viewport>
+            <Rectangle2D />
+         </viewport>
+      </ImageView>
+      <ImageView fx:id="fuelTank" fitHeight="50.0" fitWidth="50.0" layoutX="869.0" layoutY="285.0" onDragDetected="#fuelTankOnDragDetectedEvent" onDragOver="#fuelTankOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../pics/icons8-база-данных-50.png" />
+         </image>
+         <viewport>
+            <Rectangle2D />
+         </viewport>
       </ImageView>
       </children></AnchorPane>
