--- a/src/main/resources/views/constructor.fxml
+++ b/src/main/resources/views/constructor.fxml
@@ -31,37 +31,37 @@
             </font></Button>
          <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" />
          <Line endX="86.0" endY="315.0" layoutX="633.0" layoutY="185.0" startX="86.0" startY="-186.0" />
-         <Label layoutX="766.0" layoutY="20.0" text="ЭЛЕМЕНТЫ">
+         <Label layoutX="765.0" layoutY="8.0" text="ЭЛЕМЕНТЫ">
             <font>
                <Font size="17.0" />
             </font>
          </Label>
-         <Label layoutX="827.0" layoutY="67.0" text="-ВЪЕЗД">
+         <Label layoutX="820.0" layoutY="72.0" text="-ВЪЕЗД">
             <font>
                <Font size="17.0" />
             </font>
          </Label>
-         <Label layoutX="826.0" layoutY="117.0" text="-ВЫЕЗД">
+         <Label layoutX="820.0" layoutY="165.0" text="-ВЫЕЗД">
             <font>
                <Font size="17.0" />
             </font>
          </Label>
-         <Label layoutX="825.0" layoutY="177.0" text="-КАССА">
+         <Label layoutX="820.0" layoutY="252.0" text="-КАССА">
             <font>
                <Font size="17.0" />
             </font>
          </Label>
-         <Label layoutX="839.0" layoutY="238.0" text="-ТРК">
+         <Label layoutX="820.0" layoutY="343.0" text="-ТРК">
             <font>
                <Font size="16.0" />
             </font>
          </Label>
-         <Label layoutX="846.0" layoutY="296.0" text="-ТБ">
+         <Label layoutX="820.0" layoutY="432.0" text="-ТБ">
             <font>
                <Font size="17.0" />
             </font>
          </Label>
-      <ImageView fx:id="petrolStation" fitHeight="50.0" fitWidth="50.0" layoutX="766.0" layoutY="224.0" onDragDetected="#petrolStationOnDragDetectedEvent" onDragOver="#petrolStationOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="petrolStation" fitHeight="50.0" fitWidth="50.0" layoutX="750.0" layoutY="330.0" onDragDetected="#petrolStationOnDragDetectedEvent" onDragOver="#petrolStationOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../pics/sprites.png" />
          </image>
@@ -69,7 +69,7 @@
             <Rectangle2D height="50.0" minY="150.0" width="50.0" />
          </viewport>
       </ImageView>
-      <ImageView fx:id="fuelTank" fitHeight="50.0" fitWidth="50.0" layoutX="766.0" layoutY="284.0" onDragDetected="#fuelTankOnDragDetectedEvent" onDragOver="#fuelTankOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="fuelTank" fitHeight="50.0" fitWidth="50.0" layoutX="750.0" layoutY="420.0" onDragDetected="#fuelTankOnDragDetectedEvent" onDragOver="#fuelTankOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../pics/sprites.png" />
          </image>
@@ -77,12 +77,28 @@
             <Rectangle2D height="50.0" minX="50.0" minY="150.0" width="50.0" />
          </viewport>
       </ImageView>
-      <ImageView fx:id="cashBox" fitHeight="50.0" fitWidth="50.0" layoutX="766.0" layoutY="165.0" onDragDetected="#cashBoxOnDragDetectedEvent" onDragOver="#cashBoxOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="cashBox" fitHeight="50.0" fitWidth="50.0" layoutX="750.0" layoutY="240.0" onDragDetected="#cashBoxOnDragDetectedEvent" onDragOver="#cashBoxOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../pics/sprites.png" />
          </image>
          <viewport>
             <Rectangle2D height="50.0" minX="100.0" minY="150.0" width="50.0" />
+         </viewport>
+      </ImageView>
+      <ImageView fx:id="exit" fitHeight="50.0" fitWidth="50.0" layoutX="750.0" layoutY="150.0" onDragDetected="#exitOnDragDetectedEvent" onDragOver="#exitOnDragOverEvent" onMouseClicked="#exitOnMouseClicked" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../pics/sprites.png" />
+         </image>
+         <viewport>
+            <Rectangle2D height="50.0" minX="200.0" minY="200.0" width="50.0" />
+         </viewport>
+      </ImageView>
+      <ImageView fx:id="entry" fitHeight="50.0" fitWidth="50.0" layoutX="750.0" layoutY="60.0" onDragDetected="#entryOnDragDetectedEvent" onDragOver="#entryOnDragOverEvent" onMouseClicked="#entryOnMouseClicked" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../pics/sprites.png" />
+         </image>
+         <viewport>
+            <Rectangle2D height="50.0" minX="200.0" minY="200.0" width="50.0" />
          </viewport>
       </ImageView>
       </children></AnchorPane>
