--- a/src/main/resources/views/modeller.fxml
+++ b/src/main/resources/views/modeller.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModellerController">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -25,7 +25,7 @@
                     <Font size="17.0" />
                 </font>
             </Button>
-            <Button layoutX="14.0" layoutY="131.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" text="Работа с БД" wrapText="true">
+            <Button layoutX="14.0" layoutY="131.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" text="Работа с БД" wrapText="true" onAction="#createDBWork">
                 <font>
                     <Font size="17.0" />
                 </font>
