--- a/src/main/resources/views/db.fxml
+++ b/src/main/resources/views/db.fxml
@@ -5,17 +5,16 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.Db">
+<AnchorPane prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.Db">
    <children>
       <TableView layoutX="14.0" layoutY="20.0" prefHeight="318.0" prefWidth="321.0">
         <columns>
-          <TableColumn prefWidth="154.0" text="Вид топлива" />
-          <TableColumn prefWidth="166.0" text="Цена" />
+          <TableColumn prefWidth="154.0" style="-fx-font-size: 14; -fx-font-family: Constantia;" text="Вид топлива" />
+          <TableColumn prefWidth="166.0" style="-fx-font-size: 14; -fx-font-family: Constantia;" text="Цена" />
         </columns>
       </TableView>
-      <Button layoutX="14.0" layoutY="373.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="89.0" text="Добавить" />
-      <Button layoutX="130.0" layoutY="373.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="89.0" text="Изменить" />
-      <Button layoutX="246.0" layoutY="373.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="89.0" text="Удалить" />
+      <Button layoutX="75.0" layoutY="351.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="89.0" stylesheets="@../styles.css" text="Добавить" />
+      <Button layoutX="75.0" layoutY="389.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="89.0" stylesheets="@../styles.css" text="Изменить" />
+      <Button layoutX="75.0" layoutY="426.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="89.0" stylesheets="@../styles.css" text="Удалить" />
    </children>
 </AnchorPane>
