--- a/src/main/resources/views/developerInfo.fxml
+++ b/src/main/resources/views/developerInfo.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -13,7 +16,7 @@
     </rowConstraints>
     <AnchorPane prefHeight="275.0" prefWidth="384.0">
       <children>
-         <TextArea editable="false" layoutX="13.0" layoutY="19.0" prefHeight="241.0" prefWidth="359.0" text="Список разработчиков:&#10;       Конев Алексей&#10;       Сергеев Никита&#10;       Фомичёв Антон">
+         <TextArea editable="false" layoutX="13.0" layoutY="19.0" prefHeight="241.0" prefWidth="359.0" styleClass="text" stylesheets="@../styles.css" text="Список разработчиков: &#10;&#9;Конев Алексей&#10;       Сергеев Никита&#10;       Фомичёв Антон">
             <font>
                <Font size="29.0" />
             </font>
