--- a/src/main/resources/views/imitation.fxml
+++ b/src/main/resources/views/imitation.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConstructorController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConstructorController">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -28,46 +32,46 @@
                 <font>
                     <Font name="Arial" size="26.0" />
                 </font></Button>
-            <Button layoutX="14.0" layoutY="170.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" text="В конструктор" wrapText="true">
+            <Button layoutX="14.0" layoutY="378.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В конструктор" wrapText="true">
                 <font>
                     <Font size="17.0" />
                 </font></Button>
-            <Button layoutX="14.0" layoutY="276.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" text="В моделирование" wrapText="true">
+            <Button layoutX="14.0" layoutY="416.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В моделирование" wrapText="true">
                 <font>
                     <Font size="17.0" />
                 </font></Button>
-            <Button layoutX="14.0" layoutY="385.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" text="В меню" wrapText="true">
+            <Button layoutX="14.0" layoutY="454.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В меню" wrapText="true">
                 <font>
                     <Font size="17.0" />
                 </font></Button>
             <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" />
             <Line endX="86.0" endY="315.0" layoutX="736.0" layoutY="186.0" startX="86.0" startY="-186.0" />
-            <Label layoutX="869.0" layoutY="21.0" text="ЭЛЕМЕНТЫ">
+            <Label layoutX="869.0" layoutY="21.0" styleClass="text" stylesheets="@../styles.css" text="ЭЛЕМЕНТЫ">
                 <font>
                     <Font size="17.0" />
                 </font>
             </Label>
-            <Label layoutX="930.0" layoutY="68.0" text="-ВЪЕЗД">
+            <Label layoutX="930.0" layoutY="68.0" styleClass="text" stylesheets="@../styles.css" text="-ВЪЕЗД">
                 <font>
                     <Font size="17.0" />
                 </font>
             </Label>
-            <Label layoutX="929.0" layoutY="118.0" text="-ВЫЕЗД">
+            <Label layoutX="929.0" layoutY="118.0" styleClass="text" stylesheets="@../styles.css" text="-ВЫЕЗД">
                 <font>
                     <Font size="17.0" />
                 </font>
             </Label>
-            <Label layoutX="928.0" layoutY="178.0" text="-КАССА">
+            <Label layoutX="928.0" layoutY="178.0" styleClass="text" stylesheets="@../styles.css" text="-КАССА">
                 <font>
                     <Font size="17.0" />
                 </font>
             </Label>
-            <Label layoutX="942.0" layoutY="239.0" text="-ТРК">
+            <Label layoutX="942.0" layoutY="239.0" styleClass="text" stylesheets="@../styles.css" text="-ТРК">
                 <font>
                     <Font size="16.0" />
                 </font>
             </Label>
-            <Label layoutX="949.0" layoutY="297.0" text="-ТБ">
+            <Label layoutX="949.0" layoutY="297.0" styleClass="text" stylesheets="@../styles.css" text="-ТБ">
                 <font>
                     <Font size="17.0" />
                 </font>
