--- a/src/main/resources/views/sample.fxml
+++ b/src/main/resources/views/sample.fxml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints />
     </rowConstraints>
-    <AnchorPane prefHeight="275.0" prefWidth="384.0">
+    <AnchorPane prefHeight="167.0" prefWidth="310.0">
         <!--<ImageView fx:id="imageView1" fitHeight="73.0" fitWidth="149.0" layoutX="235.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
          <viewport>
          </viewport>
         </ImageView>-->
-      <Button layoutX="14.0" layoutY="80.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="356.0" text="ЗАГРУЗИТЬ ТОПОЛОГИЮ" onAction="#downloadTopology">
+      <Button layoutX="55.0" layoutY="49.0" mnemonicParsing="false" onAction="#downloadTopology" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles.css" text="ЗАГРУЗИТЬ ТОПОЛОГИЮ">
          <font>
             <Font size="20.0" />
          </font></Button>
-      <Button layoutX="14.0" layoutY="148.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="356.0" text="О РАЗРАБОТЧИКЕ" onAction="#developerInfo">
+      <Button layoutX="55.0" layoutY="89.0" mnemonicParsing="false" onAction="#developerInfo" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles.css" text="О РАЗРАБОТЧИКЕ">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button layoutX="14.0" layoutY="210.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="356.0" text="СВЕДЕНИЯ О СИСТЕМЕ" onAction="#systemInfo">
+      <Button layoutX="55.0" layoutY="129.0" mnemonicParsing="false" onAction="#systemInfo" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles.css" text="СВЕДЕНИЯ О СИСТЕМЕ">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button layoutX="14.0" layoutY="19.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="356.0" text="СОЗДАТЬ ТОПОЛОГИЮ" onAction="#createTopology">
+      <Button layoutX="55.0" layoutY="9.0" mnemonicParsing="false" onAction="#createTopology" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles.css" text="СОЗДАТЬ ТОПОЛОГИЮ">
          <font>
             <Font size="20.0" />
          </font>
