--- a/src/main/resources/views/topologySize.fxml
+++ b/src/main/resources/views/topologySize.fxml
@@ -1,37 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BoundsController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BoundsController">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints />
     </rowConstraints>
-    <AnchorPane prefHeight="275.0" prefWidth="384.0">
-        <Button layoutX="142.0" layoutY="210.0" mnemonicParsing="false" onAction="#createConstructor" prefHeight="51.0" prefWidth="99.0" text="ОК">
+    <AnchorPane prefHeight="179.0" prefWidth="252.0">
+        <Button layoutX="26.0" layoutY="140.0" mnemonicParsing="false" onAction="#createConstructor" prefHeight="51.0" prefWidth="99.0" stylesheets="@../styles.css" text="ОК">
             <font>
                 <Font size="20.0" />
             </font></Button>
-      <Label layoutX="14.0" layoutY="14.0" text="ВВЕДИТЕ ДАННЫЕ:">
+      <Label layoutX="18.0" layoutY="15.0" styleClass="text" stylesheets="@../styles.css" text="ВВЕДИТЕ ДАННЫЕ:">
          <font>
             <Font size="43.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="78.0" text="ВЫСОТА:">
+      <Label layoutX="18.0" layoutY="64.0" styleClass="text" stylesheets="@../styles.css" text="ВЫСОТА:">
          <font>
             <Font size="43.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="137.0" text="ШИРИНА:">
+      <Label layoutX="18.0" layoutY="102.0" styleClass="text" stylesheets="@../styles.css" text="ШИРИНА:">
          <font>
             <Font size="43.0" />
          </font>
       </Label>
-      <Spinner fx:id="topologyHeight" layoutX="224.0" layoutY="93.0" prefHeight="34.0" prefWidth="149.0" min="3" max="6"/>
-      <Spinner fx:id="topologyWidth" layoutX="224.0" layoutY="152.0" prefHeight="34.0" prefWidth="149.0" min="7" max="10"/>
+      <Spinner fx:id="topologyHeight" layoutX="158.0" layoutY="61.0" max="6" min="3" prefHeight="18.0" prefWidth="84.0" />
+      <Spinner fx:id="topologyWidth" layoutX="158.0" layoutY="99.0" max="10" min="7" prefHeight="25.0" prefWidth="84.0" />
     </AnchorPane>
 </GridPane>
