--- a/src/main/resources/views/imitation.fxml
+++ b/src/main/resources/views/imitation.fxml
@@ -2,79 +2,85 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConstructorController">
-    <columnConstraints>
-        <ColumnConstraints />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints />
-    </rowConstraints>
-    <AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0">
-        <children>
-            <Button layoutX="14.0" layoutY="21.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="44.0" text="►" wrapText="true">
-                <font>
-                    <Font size="24.0" />
-                </font>
-            </Button>
-            <Button layoutX="80.0" layoutY="20.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="48.0" text="▌▌" wrapText="true">
-                <font>
-                    <Font size="16.0" />
-                </font>
-            </Button>
-            <Button layoutX="150.0" layoutY="21.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="48.0" text="■" wrapText="true">
-                <font>
-                    <Font name="Arial" size="26.0" />
-                </font></Button>
-            <Button layoutX="14.0" layoutY="378.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В конструктор" wrapText="true">
-                <font>
-                    <Font size="17.0" />
-                </font></Button>
-            <Button layoutX="14.0" layoutY="416.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В моделирование" wrapText="true">
-                <font>
-                    <Font size="17.0" />
-                </font></Button>
-            <Button layoutX="14.0" layoutY="454.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В меню" wrapText="true">
-                <font>
-                    <Font size="17.0" />
-                </font></Button>
-            <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" />
-            <Line endX="86.0" endY="315.0" layoutX="736.0" layoutY="186.0" startX="86.0" startY="-186.0" />
-            <Label layoutX="869.0" layoutY="21.0" styleClass="text" stylesheets="@../styles.css" text="ЭЛЕМЕНТЫ">
-                <font>
-                    <Font size="17.0" />
-                </font>
-            </Label>
-            <Label layoutX="930.0" layoutY="68.0" styleClass="text" stylesheets="@../styles.css" text="-ВЪЕЗД">
-                <font>
-                    <Font size="17.0" />
-                </font>
-            </Label>
-            <Label layoutX="929.0" layoutY="118.0" styleClass="text" stylesheets="@../styles.css" text="-ВЫЕЗД">
-                <font>
-                    <Font size="17.0" />
-                </font>
-            </Label>
-            <Label layoutX="928.0" layoutY="178.0" styleClass="text" stylesheets="@../styles.css" text="-КАССА">
-                <font>
-                    <Font size="17.0" />
-                </font>
-            </Label>
-            <Label layoutX="942.0" layoutY="239.0" styleClass="text" stylesheets="@../styles.css" text="-ТРК">
-                <font>
-                    <Font size="16.0" />
-                </font>
-            </Label>
-            <Label layoutX="949.0" layoutY="297.0" styleClass="text" stylesheets="@../styles.css" text="-ТБ">
-                <font>
-                    <Font size="17.0" />
-                </font>
-            </Label>
-        </children></AnchorPane>
-</GridPane>
+<AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Button layoutX="14.0" layoutY="21.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="44.0" text="►" wrapText="true">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Button layoutX="80.0" layoutY="20.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="48.0" text="▌▌" wrapText="true">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Button layoutX="150.0" layoutY="21.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="48.0" text="■" wrapText="true">
+         <font>
+            <Font name="Arial" size="26.0" />
+         </font>
+      </Button>
+      <Button layoutX="10.0" layoutY="387.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В конструктор" wrapText="true">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Button>
+      <Button layoutX="10.0" layoutY="425.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В моделирование" wrapText="true">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Button>
+      <Button layoutX="10.0" layoutY="463.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В меню" wrapText="true">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Button>
+      <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" />
+      <Line endX="86.0" endY="315.0" layoutX="736.0" layoutY="186.0" startX="86.0" startY="-186.0" />
+      <Label layoutX="834.0" layoutY="12.0" styleClass="text" stylesheets="@../styles.css" text="Информационное табло">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <TextArea fx:id="log_list" disable="true" editable="false" layoutX="823.0" layoutY="37.0" prefHeight="342.0" prefWidth="177.0" />
+      <Label layoutX="875.0" layoutY="393.0" styleClass="text" stylesheets="@../styles.css" text="Статистика">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="834.0" layoutY="431.0" styleClass="text" stylesheets="@../styles.css" text="Заправлено авто:">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="834.0" layoutY="462.0" styleClass="text" stylesheets="@../styles.css" text="Всего залито:">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="834.0" layoutY="412.0" styleClass="text" stylesheets="@../styles.css" text="Касса:">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Label fx:id="cash_value_label" layoutX="969.0" layoutY="412.0" styleClass="text" stylesheets="@../styles.css" text="0">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Label fx:id="automobileCountLabel" layoutX="969.0" layoutY="431.0" styleClass="text" stylesheets="@../styles.css" text="0">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Label fx:id="fuelValueLabel" layoutX="969.0" layoutY="462.0" styleClass="text" stylesheets="@../styles.css" text="0">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+   </children>
+</AnchorPane>
